--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "node-sass": "5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-injectors": "^1.3.0",
-    "redux-saga": "^1.1.3",
     "reselector": "^0.23.0",
     "typescript": "^4.4.2",
     "web-vitals": "^1.0.1"
