--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.18",
     "@types/redux": "^3.6.0",
+    "@types/redux-logger": "^3.0.9",
     "@types/redux-saga": "^0.10.5",
     "date-fns": "^2.23.0",
     "lodash": "^4.17.21",
@@ -27,6 +28,7 @@
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-injectors": "^1.3.0",
+    "redux-logger": "^3.0.6",
     "reselector": "^0.23.0",
     "typescript": "^4.4.2",
     "web-vitals": "^1.0.1"
