--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.9",
     "date-fns": "^2.23.0",
+    "gh-pages": "^3.2.3",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
