--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "beb-site",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://Lammishy.github.io/beb-site",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
