--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@types/lodash": "^4.14.172",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
+    "@types/react-animations": "^1.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.18",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.9",
+    "aphrodite": "^2.4.0",
     "date-fns": "^2.23.0",
     "gh-pages": "^3.2.3",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-animations": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
