--- a/package.json
+++ b/package.json
@@ -17,16 +17,19 @@
     "@types/react-animations": "^1.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.18",
+    "@types/react-router-dom": "^5.1.8",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.9",
     "aphrodite": "^2.4.0",
     "date-fns": "^2.23.0",
+    "framer-motion": "^4.1.17",
     "gh-pages": "^3.2.3",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-animations": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
