--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gh-pages": "^3.2.3",
     "history": "^5.0.1",
     "lodash": "^4.17.21",
+    "material-ui-image": "^3.3.2",
     "react": "^17.0.2",
     "react-animations": "^1.0.0",
     "react-dom": "^17.0.2",
