--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@types/react-animations": "^1.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.18",
-    "@types/react-router-dom": "^5.1.8",
+    "@types/react-router": "^5.1.16",
+    "@types/react-router-dom": "^5.1.9",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.9",
     "aphrodite": "^2.4.0",
