--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-router-dom": "^5.1.9",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
     "aphrodite": "^2.4.0",
     "date-fns": "^2.23.0",
     "framer-motion": "^4.1.17",
@@ -42,7 +43,7 @@
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
-    "typescript": "^4.4.2",
+    "typescript": "4.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -70,5 +71,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-react-app": "^6.0.0"
   }
 }
